# dashboard

./: CLI_PROPOSALS_SUMMARY.md  Cargo.toml  IMPLEMENTATION.md  README.md  TTS_IMPLEMENTATION_SUMMARY.md  TTS_V2_IMPLEMENTATION.md
crates/: README.md
crates/chat/: Cargo.toml  IMPLEMENTATION.md  MCP_SERVER.md  PHASE4_SUMMARY.md  README.md  SINGLE_BINARY_INVESTIGATION.md  SINGLE_BINARY_SUCCESS.md  SQLITE_CONFLICT_RESOLUTION.md  TELEGRAM_IMPLEMENTATION.md  UNIFIED_TELEGRAM_WHATSAPP_OPTIONS.md  WHATSAPP_QUICKSTART.md  WHATSAPP_VERTICAL_SLICE_STATUS.md  flake.nix
crates/chat/benches/: message_filtering.rs
crates/chat/patches/grammers-session/: Cargo.toml
crates/chat/src/: filter_parser.rs  lib.rs  matrix_client.rs  sources_manager.rs  telegram_client.rs  telegram_source.rs  types.rs  whatsapp_source.rs
crates/chat/src/cli_common/: cli.rs  config.rs  formatters.rs
crates/chat/src/cli_common/telegram/: mod.rs
crates/chat/src/cli_common/telegram/commands/: client.rs  config_cmd.rs  export.rs  get.rs  info.rs  init.rs  list.rs  logout.rs  mod.rs  search.rs  status.rs  watch.rs
crates/chat/src/mcp_server/: mod.rs  server.rs  tools.rs
crates/chat/src/unified_commands/: chats.rs  messages.rs  mod.rs  sources.rs
crates/chat/tests/: integration_test.rs  mcp_server_integration.sh  mcp_test_runner.py
openspec/: project.md
openspec/changes/add-pty-terminal-support/: design.md  proposal.md  tasks.md
openspec/changes/add-pty-terminal-support/specs/terminal-interface/: spec.md
openspec/changes/add-signal-cli/: proposal.md  tasks.md
openspec/changes/add-signal-cli/specs/signal-cli/: spec.md
openspec/changes/add-telegram-cli/: proposal.md  tasks.md
openspec/changes/add-telegram-cli/specs/telegram-cli/: spec.md
openspec/changes/add-tts-chat-interface/: design.md  proposal.md  tasks.md
openspec/changes/add-tts-chat-interface/specs/chat-interface/: spec.md
openspec/changes/add-tts-chat-interface/specs/tts-engine/: spec.md
openspec/changes/add-whatsapp-cli/: proposal.md  tasks.md
openspec/changes/add-whatsapp-cli/specs/whatsapp-cli/: spec.md
openspec/changes/init-agent-dashboard/: design.md  proposal.md  tasks.md
openspec/changes/init-agent-dashboard/specs/agent-configuration/: spec.md
openspec/changes/init-agent-dashboard/specs/agent-connection/: spec.md
openspec/changes/init-agent-dashboard/specs/chat-interface/: spec.md
openspec/changes/init-agent-dashboard/specs/ollama-agent/: spec.md
openspec/changes/init-agent-dashboard/specs/plan-interface/: spec.md
openspec/changes/init-agent-dashboard/specs/shell-toolcall/: spec.md
openspec/changes/unify-chat-api/: IMPLEMENTATION_STATUS.md  design.md  proposal.md  tasks.md
openspec/changes/unify-chat-api/specs/cli-commands/: spec.md
openspec/changes/unify-chat-api/specs/mcp-server/: spec.md
openspec/changes/unify-chat-api/specs/message-filters/: spec.md
openspec/changes/unify-chat-api/specs/unified-api/: spec.md
src/: main.rs
src/agent/: mod.rs  ollama.rs  types.rs
src/config/: mod.rs
src/plan/: mod.rs  types.rs
src/storage/: chat_history.rs  mod.rs
src/toolcall/: mod.rs  shell.rs  types.rs
src/tts/: config.rs  mod.rs  model.rs  playback.rs  queue.rs  service.rs  synthesis.rs
src/ui/: app.rs  chat.rs  config_panel.rs  mod.rs  sidebar.rs
