[package]
name = "agent-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
chat = { path = "crates/chat" }
eframe = "0.29"
egui = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"

# TTS dependencies (optional for now due to platform-specific audio dependencies)
piper-rs = { version = "0.1", optional = true }  # Piper TTS ONNX models
rodio = { version = "0.21", optional = true, default-features = false }  # Audio playback
hound = "3.5"  # WAV file handling for audio samples

[features]
default = []
tts = ["piper-rs", "rodio"]
