[workspace]

[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat"
path = "src/bin/main.rs"

[[bin]]
name = "chat-mcp-server"
path = "src/bin/chat-mcp-server.rs"
required-features = ["mcp"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# CLI dependencies
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dirs = "5"
env_logger = "0.11"
humantime = "2"
log = "0.4"
toml = "0.8"

# Optional dependencies for actual implementations
# Uncomment when ready to implement
# matrix-sdk = { version = "0.14", optional = true }
grammers-client = { version = "0.8", optional = true }
grammers-session = { version = "0.8", optional = true }
grammers-mtsender = { version = "0.8", optional = true }

# MCP server dependencies
rust-mcp-sdk = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "message_filtering"
harness = false

[features]
default = ["telegram"]
matrix = []  # matrix-sdk
telegram = ["grammers-client", "grammers-session", "grammers-mtsender"]
mcp = ["rust-mcp-sdk"]
