[workspace]
exclude = ["whatsapp-rust"]

# Patch grammers-session to make SQLite optional
# This allows both Telegram and WhatsApp in the same binary
[patch.crates-io]
grammers-session = { path = "./patches/grammers-session" }

[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat"
path = "src/bin/main.rs"
# Both Telegram and WhatsApp now supported in single binary!

[[bin]]
name = "chat-mcp-server"
path = "src/bin/chat-mcp-server.rs"
required-features = ["mcp"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# CLI dependencies
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dirs = "5"
env_logger = "0.11"
humantime = "2"
log = "0.4"
toml = "0.8"

# Optional dependencies for actual implementations
# Uncomment when ready to implement
# matrix-sdk = { version = "0.14", optional = true }

# Telegram (using patched grammers-session without SQLite)
grammers-client = { version = "0.8", optional = true }
grammers-session = { version = "0.8", optional = true, default-features = false }
grammers-mtsender = { version = "0.8", optional = true }

# WhatsApp client (unofficial - may violate ToS)
# Now enabled thanks to patched grammers-session
whatsapp-rust = { path = "./whatsapp-rust", optional = true }
qr2term = { version = "0.3", optional = true }  # For QR code display

# MCP server dependencies
rust-mcp-sdk = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "message_filtering"
harness = false

[features]
default = ["telegram", "whatsapp"]
matrix = []  # matrix-sdk
telegram = ["grammers-client", "grammers-session", "grammers-mtsender"]
whatsapp = ["whatsapp-rust", "qr2term"]
mcp = ["rust-mcp-sdk"]
